--- a/app/src/components/App.css
+++ b/app/src/components/App.css
@@ -68,6 +68,7 @@
   margin: 9px;
 }
 .app-main-sidebar-panel-menu-item {
+  display: block;
   font-size: 14px;
   margin: 0 10px;
   border-radius: 100%;
@@ -80,18 +81,15 @@
 .app-main-sidebar-panel-menu-item:hover {
   background-color: rgba(0,0,0,0.2);
 }
-.app-main-sidebar-panel-menu-item-link-icon {
+.app-main-sidebar-panel-menu-item-icon {
   width: 44px;
   height: 44px;
 }
-.app-main-sidebar-panel-menu-item-link-icon svg {
+.app-main-sidebar-panel-menu-item-icon svg {
   margin: 13px;
   width: 18px;
   height: 18px;
   fill: #fff;
-}
-.app-main-sidebar-panel-menu-item.active .app-main-sidebar-panel-menu-item-link-icon svg {
-  fill: #333;
 }
 
 .app-main-sidebar-nav {
@@ -125,7 +123,9 @@
 }
 .app-main-sidebar-nav-menu-item {
   font-size: 14px;
+  height: 44px;
   padding: 0 20px;
+  display: block;
 }
 .app-main-sidebar-nav-menu-item.active {
   background: rgba(0,0,0,0.03) !important;
@@ -133,33 +133,29 @@
 .app-main-sidebar-nav-menu-item:hover {
   background: rgba(0,0,0,0.01);
 }
-.app-main-sidebar-nav-menu-item-link {
-  height: 44px;
-  display: block;
-}
-.app-main-sidebar-nav-menu-item-link-icon {
+.app-main-sidebar-nav-menu-item-icon {
   display: inline-block;
   vertical-align: top;
   width: 44px;
   height: 44px;
 }
-.app-main-sidebar-nav-menu-item-link-icon svg {
+.app-main-sidebar-nav-menu-item-icon svg {
   margin: 13px;
   width: 18px;
   height: 18px;
   fill: #777;
 }
-.app-main-sidebar-nav-menu-item.active .app-main-sidebar-nav-menu-item-link-icon svg {
+.app-main-sidebar-nav-menu-item.active .app-main-sidebar-nav-menu-item-icon svg {
   fill: #333;
 }
-.app-main-sidebar-nav-menu-item-link-text {
+.app-main-sidebar-nav-menu-item-text {
   display: inline-block;
   vertical-align: top;
   line-height: 44px;
   margin-left: 12px;
   color: #666;
 }
-.app-main-sidebar-nav-menu-item.active .app-main-sidebar-nav-menu-item-link-text {
+.app-main-sidebar-nav-menu-item.active .app-main-sidebar-nav-menu-item-text {
   color: #333;
 }
 
@@ -311,4 +307,10 @@
   font-size: 15px;
   line-height: 35px;
   max-width: 800px;
+}
+
+/* BuildView */
+
+.app-content-build-list {
+  max-width: 600px;
 }
