--- a/app/src/components/App.css
+++ b/app/src/components/App.css
@@ -53,8 +53,8 @@
 	color: #fff;
 }
 .app-main-sidebar-panel-header {
-  height: 90px;
-  padding: 25px 10px;
+  height: 100px;
+  padding: 35px 10px 25px;
 }
 .app-main-sidebar-panel-header-avatar {
   width: 44px;
@@ -101,8 +101,8 @@
   overflow-y: auto;
 }
 .app-main-sidebar-nav-header {
-  height: 90px;
-  padding: 25px 20px;
+  height: 100px;
+  padding: 35px 20px 25px;
 }
 .app-main-sidebar-nav-header-avatar {
   width: 40px;
@@ -173,8 +173,8 @@
 }
 
 .app-main-view-header {
-	height: 90px;
-  padding: 25px 0;
+	height: 100px;
+  padding: 35px 0 25px;
   border-bottom: solid 1px #e8e8e8;
   max-width: 1200px;
   margin: 0 45px;
@@ -199,7 +199,7 @@
 }
 
 .app-main-view-content {
-	padding: 35px 0;
+	padding: 45px 0;
   max-width: 1200px;
   margin: 0 45px;
 }
@@ -289,11 +289,14 @@
 
 /* AppForm */
 
+.app-form-field {
+  max-width: 400px;
+}
 .app-form-btns {
-  padding-top: 20px;
+  padding-top: 30px;
 }
 .app-form-links {
-  padding-top: 15px;
+  padding-top: 25px;
 }
 .app-form-link {
   line-height: 24px;
