--- a/app/src/index.css
+++ b/app/src/index.css
@@ -14,7 +14,41 @@ body {
 	cursor: default;
 }
 
+/* scroll */
+
+@media only screen and (min-width: 1024px) {
+
+	::-webkit-scrollbar-track
+	{
+		width: 6px;
+		height: 6px;
+		background: #e8e8e8;
+	}
+	::-webkit-scrollbar
+	{
+		width: 6px;
+		height: 6px;
+	}
+	::-webkit-scrollbar-thumb
+	{
+		width: 6px;
+		height: 6px;
+		background-color: #b5b5c5;
+	}
+	::-webkit-scrollbar-thumb:hover {
+		background: #a3a3ad;
+	}
+
+}
+
 /* Ant Design fixex */
+
+.ant-modal-wrap {
+	overflow-y: scroll;
+}
+.ant-modal-confirm-body .ant-modal-confirm-title {
+	font-weight: 600;
+}
 
 .ant-form-item {
 	margin-bottom: 20px;
@@ -25,7 +59,7 @@ body {
 .ant-form-item-with-help {
 	margin-bottom: 1px;
 }
+
 .ant-form-explain {
 	margin-top: 0;
-	text-align: right;
 }
