--- a/app/src/components/App.css
+++ b/app/src/components/App.css
@@ -74,6 +74,7 @@
   border-radius: 100%;
   width: 44px;
   height: 44px;
+  cursor: pointer;
 }
 .app-main-sidebar-panel-menu-item.active {
   background: rgba(0,0,0,0.02) !important;
