--- a/app/src/components/App.css
+++ b/app/src/components/App.css
@@ -9,6 +9,12 @@
   bottom: 0;
 }
 
+@media only screen and (max-width: 1024px) {
+	.app {
+		overflow-y: scroll;
+	}
+}
+
 /* vertical equalizer */
 
 .app-vertical_equalizer {
@@ -56,13 +62,13 @@
   height: 100px;
   padding: 35px 10px 25px;
 }
-.app-main-sidebar-panel-header-avatar {
+.app-main-sidebar-panel-header-user-avatar {
   width: 44px;
   height: 44px;
   background: rgba(255,255,255,0.10);
   border-radius: 100%;
 }
-.app-main-sidebar-panel-header-avatar svg {
+.app-main-sidebar-panel-header-user-avatar svg {
   width: 24px;
   height: 24px;
   margin: 9px;
@@ -75,9 +81,6 @@
   width: 44px;
   height: 44px;
   cursor: pointer;
-}
-.app-main-sidebar-panel-menu-item.active {
-  background: rgba(0,0,0,0.02) !important;
 }
 .app-main-sidebar-panel-menu-item:hover {
   background-color: rgba(0,0,0,0.2);
@@ -103,7 +106,7 @@
 }
 .app-main-sidebar-nav-header {
   height: 100px;
-  padding: 35px 20px 25px;
+  padding: 35px 20px 15px;
 }
 .app-main-sidebar-nav-header-avatar {
   width: 40px;
@@ -160,6 +163,58 @@
   color: #333;
 }
 
+@media only screen and (max-width: 1024px) {
+  .app-main-sidebar {
+    width: 100%;
+    position: relative;
+  }
+  .app-main-sidebar-panel {
+    width: 100%;
+    height: 54px;
+  }
+  .app-main-sidebar-panel-header {
+    padding: 5px 0 0 20px;
+    height: 100%;
+    float: left;
+  }
+  .app-main-sidebar-panel-header-user-avatar {
+    background: rgba(0, 0, 0, 0.2);
+  }
+  .app-main-sidebar-panel-menu {
+    float: right;
+    padding: 5px 20px 0 0;
+  }
+  .app-main-sidebar-panel-menu-item {
+    margin: 0 0 0 10px;
+    display: inline-block;
+    background: rgba(0,0,0,0.1);
+  }
+  .app-main-sidebar-nav {
+    width: 100%;
+  }
+  .app-main-sidebar-nav-header {
+    height: auto;
+    padding: 10px 20px 7.5px;
+  }
+  .app-main-sidebar-nav-menu {
+    white-space: nowrap;
+    overflow-y: hidden;
+    overflow-x: scroll;
+  }
+  .app-main-sidebar-nav-menu-items {
+    padding: 0 12.5px;
+  }
+  .app-main-sidebar-nav-menu-item {
+    display: inline-block;
+    padding-left: 5px;
+    padding-right: 20px;
+    border-radius: 5px 5px 0 0;
+  }
+  .app-main-sidebar-nav-menu-item-text {
+    margin-left: 0;
+  }
+}
+
 /* AppMainView */
 
 .app-main-view {
@@ -188,14 +243,24 @@
   font-weight: 600;
   color: #555;
 }
-.app-main-view-header-btns {
+.app-main-view-header-title-counter {
+  display: inline-block;
+  margin-left: 10px;
+  font-size: 16px;
+  line-height: 40px;
+  color: #ccc;
+  font-weight: 400;
+}
+.app-main-view-header-controls {
 	display: inline-block;
   vertical-align: top;
   float: right;
   padding: 4px 0;
 }
-.app-main-view-header-btn {
-	margin-left: 12.5px;
+.app-main-view-header-control {
+	margin-left: 15px;
+  display: inline-block;
+  vertical-align: top;
 }
 
 .app-main-view-tabs {
@@ -246,6 +311,24 @@
 	margin-left: 12px;
 }
 
+@media only screen and (max-width: 1024px) {
+  .app-main-view {
+    margin-left: 0;
+    position: relative;
+    left: 0;
+    overflow-y: visible;
+  }
+  .app-main-view-header {
+    margin: 0 25px;
+    height: auto;
+    padding-top: 30px;
+  }
+  .app-main-view-content {
+    margin: 0 25px;
+    padding-top: 30px;
+  }
+}
+
 /* AppAuth */
 
 .app-auth {
@@ -281,34 +364,43 @@
   float: right;
   font-size: 14px;
 }
-.app-auth-box-divider {
-  margin: 40px 0;
-  color: #888;
-}
-.app-auth-box-soc_btn {
-  border-color: #F44336;
-}
-.app-auth-box-soc_btn::after {
-  display: none !important;
-}
-.app-auth-box-soc_btn:hover {
-  border-color: #EF5350;
-}
-.app-auth-box-soc_btn:focus {
-  border-color: #E53935;
+
+@media only screen and (max-width: 1024px) {
+  .app-auth {
+    padding: 25px;
+  }
+  .app-auth-box {
+    margin: 0 auto;
+    border-radius: 0;
+  }
 }
 
 /* AppForm */
 
+.app-form.filter {
+  padding: 15px 10px;
+}
+.app-form-col {
+  margin-bottom: 15px;
+}
+.app-form-fields-divider {
+  margin-top: 7.5px;
+}
 .app-form-field {
   max-width: 400px;
+}
+.app-form.filter .app-form-field {
+  margin-bottom: 10px;
 }
 .app-form-agreement {
   padding-top: 10px;
 }
 .app-form-btns {
-  padding-top: 15px;
+  padding-top: 32px;
   margin-bottom: -20px;
+}
+.app-form.filter .app-form-btns {
+  padding-top: 20px;
 }
 .app-form-btn {
   margin: 0 20px 20px 0;
@@ -329,6 +421,13 @@
 
 /* InformationView */
 
+.app-information h2 {
+  margin-top: 45px;
+  margin-bottom: 20px;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 30px;
+}
 .app-information p {
   font-size: 15px;
   line-height: 35px;
