--- a/app/src/index.css
+++ b/app/src/index.css
@@ -51,13 +51,16 @@ body {
 }
 
 .ant-form-item {
-	margin-bottom: 20px;
+	margin-bottom: 18px;
+}
+.ant-form-item:last-child {
+	margin-bottom: 0;
 }
 .ant-form-item-required {
 	font-size: 15px !important;
 }
 .ant-form-item-with-help {
-	margin-bottom: 1px;
+	margin-bottom: -1px;
 }
 
 .ant-form-explain {
