--- a/app/src/components/App.css
+++ b/app/src/components/App.css
@@ -163,58 +163,6 @@
   color: #333;
 }
 
-@media only screen and (max-width: 1024px) {
-  .app-main-sidebar {
-    width: 100%;
-    position: relative;
-  }
-  .app-main-sidebar-panel {
-    width: 100%;
-    height: 54px;
-  }
-  .app-main-sidebar-panel-header {
-    padding: 5px 0 0 20px;
-    height: 100%;
-    float: left;
-  }
-  .app-main-sidebar-panel-header-user-avatar {
-    background: rgba(0, 0, 0, 0.2);
-  }
-  .app-main-sidebar-panel-menu {
-    float: right;
-    padding: 5px 20px 0 0;
-  }
-  .app-main-sidebar-panel-menu-item {
-    margin: 0 0 0 10px;
-    display: inline-block;
-    background: rgba(0,0,0,0.1);
-  }
-  .app-main-sidebar-nav {
-    width: 100%;
-  }
-  .app-main-sidebar-nav-header {
-    height: auto;
-    padding: 10px 20px 7.5px;
-  }
-  .app-main-sidebar-nav-menu {
-    white-space: nowrap;
-    overflow-y: hidden;
-    overflow-x: scroll;
-  }
-  .app-main-sidebar-nav-menu-items {
-    padding: 0 12.5px;
-  }
-  .app-main-sidebar-nav-menu-item {
-    display: inline-block;
-    padding-left: 5px;
-    padding-right: 20px;
-    border-radius: 5px 5px 0 0;
-  }
-  .app-main-sidebar-nav-menu-item-text {
-    margin-left: 0;
-  }
-}
-
 /* AppMainView */
 
 .app-main-view {
@@ -272,6 +220,10 @@
   padding: 25px 0;
 }
 
+.app-main-view-collapse-panel-content {
+  padding: 2.5px 5px 10px;
+}
+
 .app-main-view-content {
 	padding: 45px 0;
   max-width: 1200px;
@@ -309,24 +261,6 @@
 }
 .app-main-view-content-item-btn {
 	margin-left: 12px;
-}
-
-@media only screen and (max-width: 1024px) {
-  .app-main-view {
-    margin-left: 0;
-    position: relative;
-    left: 0;
-    overflow-y: visible;
-  }
-  .app-main-view-header {
-    margin: 0 25px;
-    height: auto;
-    padding-top: 30px;
-  }
-  .app-main-view-content {
-    margin: 0 25px;
-    padding-top: 30px;
-  }
 }
 
 /* AppAuth */
@@ -368,6 +302,7 @@
 @media only screen and (max-width: 1024px) {
   .app-auth {
     padding: 25px;
+    overflow-y: visible;
   }
   .app-auth-box {
     margin: 0 auto;
@@ -440,5 +375,9 @@
 /* BuildView */
 
 .app-build-list {
-  max-width: 600px;
+  max-width: 800px;
+  margin-bottom: 35px;
+}
+.app-build-list:last-child {
+  margin-bottom: 0;
 }
