--- a/src/components/App.css
+++ b/src/components/App.css
@@ -447,6 +447,9 @@
 .app-form-agreement {
   padding-top: 10px;
 }
+.app-form-captcha {
+  margin: 30px 0 5px;
+}
 .app-form-btns {
   padding-top: 32px;
   margin-bottom: -20px;
@@ -481,7 +484,13 @@
 
 /* InformationView */
 
-.app-information h2 {
+.app-information {
+  position: relative;
+}
+.app-information-content {
+  max-width: 800px;
+}
+.app-information-content h2 {
   margin-top: 25px;
   margin-bottom: 15px;
   font-weight: 600;
@@ -489,10 +498,9 @@
   line-height: 28px;
   color: #444;
 }
-.app-information p {
+.app-information-content p {
   font-size: 15px;
   line-height: 35px;
-  max-width: 800px;
 }
 
 /* BuildView */
